# memento-tattoo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IDEA.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: concepts.md  essay.md  public-readiness-review.md
examples/basic/: README.md
examples/basic/memento/: notes.md  project.md  retention_log.jsonl  tattoos.md
examples/basic/project/: memory.md
scripts/: export_public.py
src/memento_tattoo/: _time.py  agent.py  cli.py  config.py  doctor.py  garden.py  lock.py  new_id.py  project_memory.py  rebuild.py  recall.py  registry.py  retention.py  save_commit.py  session_store.py  tattoo_audit.py  write_through.py
templates/: AGENTS.md
tests/: test_agent.py  test_cli.py  test_concurrent_saves.py  test_config.py  test_doctor.py  test_examples.py  test_garden.py  test_new_id.py  test_project_memory.py  test_public_export.py  test_rebuild.py  test_recall.py  test_registry.py  test_retention.py  test_save_commit.py  test_session_store.py  test_tattoo_audit.py  test_write_through.py
tests/fixtures/: legacy_project.md
