[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "memento-tattoo"
version = "0.1.0"
description = "A file-based lesson-retention memory framework for LLM agents."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Stew Tong" }]
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = ["agents", "memory", "llm", "cli", "markdown"]

[project.urls]
Homepage = "https://github.com/stewtong/memento-tattoo"
Source = "https://github.com/stewtong/memento-tattoo"
Issues = "https://github.com/stewtong/memento-tattoo/issues"

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
memento-tattoo = "memento_tattoo.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
